# witcherscript-language

./: .gitattributes  .gitignore  AGENTS.md  CODESTYLE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  justfile
.claude/commands/: watchlogs.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  release-wsformat.yml  release.yml
benches/: iai_lib.rs  lib_completion.rs  lib_index.rs  lib_parse.rs  lib_resolve.rs  lib_symbols.rs  lsp_smoke.rs
benches/common/: synth.rs
builtins/: CGuiObject.ws  CR4HudModule.ws  EEnvColorGroup.ws  EEnvManagerModifier.ws  EInputKey.ws  EShowFlags.ws  array.ws  enums.ws  native-types.ws  orphan_enums.ws  state-classes.ws  unknown-classes.ws  unknown-enums.ws  unknown-interfaces.ws  unknown-structs.ws
docs/: formatter-config.md  formatter-test-spec.yaml  language-rules.md
docs/agents/: architecture.md  benchmarks.md  builtins.md  class_body_specifiers.md  diagnostics.md  invariants.md  language.md  lsp_server.md  mod_resolve.md  resolution.md  semantic_tokens.md  symbols.md  task-guide.md  testing.md  writing-tests.md
docs/diagnostics/: validation.md
src/: builtins.rs  diagnostics.rs  document.rs  files.rs  format_config.rs  formatter.rs  lib.rs  line_index.rs  main.rs  resolve.rs  scope_index.rs  script_env.rs  semantic_tokens.rs  strings.rs  symbols.rs
src/builtins/: tests.rs
src/cst/: ancestors.rs  descendants.rs  fields.rs  grammar.rs  if_stmt.rs  kinds.rs  literals.rs  mod.rs  nav.rs  offsets.rs  sourcegen.rs  walk.rs
src/diagnostics/: abstract_instantiation.rs  annotation_state_target.rs  arg_count.rs  base_script_conflict.rs  cst_walker.rs  duplicate_local.rs  duplicate_symbols.rs  inherited_field.rs  mod.rs  override_consistency.rs  parent_outside_state.rs  shadowing.rs  state_owner.rs  struct_temp_member.rs  super_field_access.rs  tests.rs  type_mismatch.rs  unknown_method.rs  unknown_symbol.rs  unused_symbol.rs  wrapped_method.rs
src/document/: tests.rs
src/files/: tests.rs
src/formatter/: action.rs  core.rs  declarations.rs  if_action.rs  signatures.rs  statements.rs  switch_action.rs  tests.rs
src/line_index/: tests.rs
src/resolve/: assignability.rs  ast.rs  completion_catalog.rs  db.rs  definition.rs  document_highlight.rs  edit_plan.rs  extract_common.rs  extract_func.rs  extract_var.rs  inference.rs  inlay_hints.rs  inline_var.rs  join_split_decl.rs  mod.rs  name_context.rs  overrides.rs  reaching_defs.rs  references.rs  selection.rs  shadowed_base.rs  signature.rs  state_classes.rs  subscription_registry.rs  symbol_db.rs  tests.rs  type_definition.rs  workspace_index.rs  workspace_symbols.rs  writes.rs
src/script_env/: tests.rs
src/semantic_tokens/: mod.rs  tests.rs
src/symbols/: doc.rs  extract.rs  mod.rs  tests.rs  types.rs  util.rs
src/test_support/: fixture.rs  mod.rs
src/types/: mod.rs  parse.rs  tests.rs
tests/: language_features.rs  parser_fixtures.rs  wsformat_cli.rs
tests/e2e_snapshots/: witcherscript_lsp__tests__e2e__session__battery__base_layering___workspace__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__base_layering__mod_scripts_mod_player_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__base_layering__mod_scripts_mod_player_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod___workspace__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_manager_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_manager_ws__inlay.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_manager_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_manager_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_params_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_params_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_lookup_ws__diagnostics.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_lookup_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_lookup_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_signature_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_signature_ws__inlay.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_signature_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_probe_signature_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_tuner_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_tuner_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__emitter_mod__mod_scripts_tuner_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__minimal___workspace__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__minimal__scripts_player_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__minimal__scripts_player_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__minimal__scripts_player_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__minimal__scripts_types_ws__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__minimal__scripts_types_ws__tokens.snap  witcherscript_lsp__tests__e2e__session__battery__multi_root___workspace__symbols.snap  witcherscript_lsp__tests__e2e__session__battery__multi_root__rootA_scripts_a_ws__format.snap  witcherscript_lsp__tests__e2e__session__battery__multi_root__rootA_scripts_a_ws__symbols.snap  (+16 more)
tools/: enuminator.ws  generate-enuminators.ps1
(+147 files in other folders)
