[package]
name = "witcherscript-parser"
version = "0.1.0"
edition = "2021"
description = "Prototype WitcherScript parser and syntax validator for Light Rewrite"
publish = false
default-run = "witcherscript-parser"

[dependencies]
# default-features = false drops colour, suggestions, env, wrap_help, unicode — smaller binary and fewer deps
clap = { version = "4.5.51", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "cargo",
] }
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
tree-sitter = "=0.22.6"
tree-sitter-witcherscript = { git = "https://github.com/webspam/tree-sitter-witcherscript.git", tag = "v0.13.0" }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
# Highest size optimisation without impacting speed
opt-level = 3
# Removes panic unwinding logic — smaller binary, but no Drop on panic, no std::panic::catch_unwind
panic = "abort"
