[package]
name = "witcherscript-language"
version = "0.3.0"
edition = "2021"
description = "LSP & language services for The Witcher 3 script files (WitcherScript / .ws)"
publish = false
default-run = "witcherscript-check"

[[bin]]
name = "witcherscript-check"
path = "src/main.rs"

[dependencies]
# default-features = false drops colour, suggestions, env, wrap_help, unicode — smaller binary and fewer deps
clap = { version = "4.5.51", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "cargo",
] }
tokio = { version = "1.48.0", features = ["io-std", "macros", "net", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
tree-sitter = "=0.26.8"
tree-sitter-witcherscript = { git = "https://github.com/webspam/tree-sitter-witcherscript.git", tag = "v0.14.1" }
rayon = "1.10"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
# Highest size optimisation without impacting speed
opt-level = 3
# Removes panic unwinding logic — smaller binary, but no Drop on panic, no std::panic::catch_unwind
panic = "abort"
