[package]
name = "witcherscript-language"
version = "0.9.0"
edition = "2024"
description = "LSP & language services for The Witcher 3 script files (WitcherScript / .ws)"
publish = false
default-run = "witcherscript-check"

[features]
default = ["test-support"]
test-support = []

[[bin]]
name = "witcherscript-check"
path = "src/main.rs"

[dependencies]
# default-features = false drops colour, suggestions, env, wrap_help, unicode - smaller binary and fewer deps
clap = { version = "4.5.51", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "cargo",
] }
tokio = { version = "1.48.0", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
async-lsp = { version = "0.2.4", default-features = false, features = ["omni-trait", "tokio", "tracing"] }
lsp-types = "0.95"
futures = "0.3"
tower = { version = "0.5", default-features = false, features = ["util"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
tree-sitter = "=0.26.8"
tree-sitter-witcherscript = { git = "https://github.com/webspam/tree-sitter-witcherscript.git", tag = "v0.16.0" }
rayon = "1.10"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
arc-swap = "1.9.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
encoding_rs = "0.8"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["io-util", "process", "time"] }
criterion = { version = "0.5", default-features = false, features = ["async_tokio", "html_reports"] }
iai-callgrind = "0.14"
rstest = { version = "0.26", default-features = false }
expect-test = "1.5"
insta = { version = "1.47", default-features = false, features = ["yaml"] }

[[bench]]
name = "lib_parse"
harness = false

[[bench]]
name = "iai_lib"
harness = false

[[bench]]
name = "lsp_smoke"
harness = false

[[bench]]
name = "lib_symbols"
harness = false

[[bench]]
name = "lib_index"
harness = false

[[bench]]
name = "lib_resolve"
harness = false

[[bench]]
name = "lib_completion"
harness = false

[lints.clippy]
# Advisory per CODESTYLE.md: surfaced in editors and plain `cargo clippy`
pedantic = { level = "warn", priority = -1 }
# Off until time permits to address
assigning_clones = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_items = "allow"

[profile.release]
codegen-units = 1
lto = true
strip = true
# Highest size optimisation without impacting speed
opt-level = 3
# Do NOT set `panic = "abort"`. witcherscript-lsp is a long-lived server and
# depends on unwinding: async-lsp's CatchUnwindLayer turns a panic in one
# request into an error response instead of aborting the whole process.
# `panic` is per-profile, not per-binary, so this also covers the CLI - fine.

# The bench profile inherits release. iai-callgrind needs symbols to attach
# callgrind's collection toggle - stripped binaries make every counter read zero.
# LTO is dropped so an unrelated edit cannot shift inlining in a benchmarked
# path and trip the regression gate with phantom instruction-count drift.
[profile.bench]
strip = false
debug = true
lto = false
